@@ -97,6 +97,9 @@ Version 2.0-dev (CVS)
 - Fixed: mitab mif/mid importer fails when a Text geometry have an 
   empty text value (bug 1978)
 
+- Fixed incorrect text justification returned by GetLabelStyleString()
+  for TABTJRight (bug 2085)
+
 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -958,5 +961,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.234 2009-07-28 21:35:29 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.235 2009-07-30 13:13:43 dmorissette Exp $
 ------------
